# VietOCR-Labeling

./: .gitignore  LICENSE  README.md  run.sh
backend/: main.py  ocr_service.py  pyproject.toml  requirements.txt
backend/configs/: setting.ini
backend/utils/: predictor.py  translate.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/components/: CanvasOverlay.vue  ImageUploader.vue  LabelEditor.vue  PageSelector.vue
frontend/src/store/: ocrStore.ts
