[project]
name = "backend"
version = "0.1.0"
description = "VietOCR Labeling backend (FastAPI + PaddleOCR + VietOCR)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.131.0",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle==3.2.2",
    "pdf2image>=1.17.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn>=0.41.0",
    "vietocr>=0.3.12",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux'"]
